# FORK_uart-sha-tinytapeout

./: .clang-format  .clangd  .envrc  .gitignore  .svlint.toml  .svls.toml  CMakeLists.txt  README.md  flake.nix  info.yaml  justfile  makefile  settings.mk
.github/workflows/: docs.yaml  gds.yaml
docs/: example.py  info.md
rsc/: config.tcl  tt3_asic_sim.pcf
src/: config.tcl  f_permutation.v  keccak.v  md5.sv  padder.v  padder1.sv  padder1.v  rconst.sv  rconst.v  round.v  second.sv  sha.sv  sha1_wmem.sv  sha1_wmem.v  sha_core.sv  top.sv  top.v  uart.v  uart_rx.v  uart_tx.v
tb/: preamble.h  sha1.h  tb.cpp
